--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="Assets/css/style.css">
-    <title>Horiseon|SEO & Marketing</title> <!--added title-->
+    <title>Horiseon | Marketing & SEO</title> <!--added title-->
 </head>
 
 <body>
@@ -26,17 +26,17 @@
     <main> <!--changing div to main since this is the main content of page-->
         <!--section ids now match w/navbar properly-->
         <section class="main" id="search-engine-optimization"> <!--changed each content box from div to section-->
-            <img src="Assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="Assets/images/search-engine-optimization.jpg" alt="organizer and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section> 
         <section class="main" id="online-reputation-management">
-            <img src="Assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="Assets/images/online-reputation-management.jpg" alt="computer with reputation chart on screen" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
-        <section class="main" id="social-media-marketing"> added id for nav link
-            <img src="Assets/images/social-media-marketing.jpg" class="float-left" />
+        <section class="main" id="social-media-marketing"> <!--added id for nav link-->
+            <img src="Assets/images/social-media-marketing.jpg" alt="table with social media icons and group of people" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
@@ -45,17 +45,17 @@
     <aside> <!--changed from div to aside because this element is positioned to the side of the main content-->
         <section class="benefits"> <!--made the class the same for each of the three sections since they are all styled same, getting rid of redundant code-->
             <h3>Lead Generation</h3>
-            <img src="Assets/images/lead-generation.png" />
+            <img src="Assets/images/lead-generation.png" alt="image of gear leading to money" />
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </section>
         <section class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="Assets/images/brand-awareness.png" />
+            <img src="Assets/images/brand-awareness.png" alt="lightbulb image" />
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </section>
         <section class="benefits">
             <h3>Cost Management</h3>
-            <img src="Assets/images/cost-management.png" />
+            <img src="Assets/images/cost-management.png" alt="spinning gear surrounded by dollar signs" />
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </section>
     </aside>
